--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -64,6 +64,25 @@ block content
 
 
 
+                            .row.sponsor-row
+                                .col-md-6
+                                    a(href="http://www.starleaf.com/about-us/careers")
+                                        img.sponsor-img(src="./img/sponsors/starleaf.png")
+                                    p
+                                        | Founded in the UK in 2008, <b>StarLeaf</b> has a global footprint with representation on every continent and offices
+                                        | across the world. They are on a mission to transform the way businesses communicate and collaborate by designing
+                                        | intuitive messaging, premium meeting and calling solutions.
+                                    p
+                                        | In September, the company was named in the Gartner 2018 Magic Quadrant for Meeting Solutions and one of the fastest
+                                        | growing tech companies in the UK by The Sunday Times Hiscox Tech Track 100.
+                                    p
+                                        | StarLeaf's culture is built on collaboration, inclusion, creativity and support. This permeates everything they do,
+                                        | across all their teams and operations. They believe everyone at StarLeaf has a part to play in their success and that
+                                        | everyone should be rewarded for their contribution. This is why every single StarLeaf employee becomes a shareholder
+                                        | through the company’s share option scheme.
+
+
+
             div.panel-group
                 div.panel.panel-default
                     div.panel-heading
