--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -66,7 +66,7 @@ block content
 
                             .row.sponsor-row
                                 .col-md-6
-                                    a(href="http://www.starleaf.com/about-us/careers")
+                                    a(href="https://www.starleaf.com/about-us/careers")
                                         img.sponsor-img(src="./img/sponsors/starleaf.png")
                                     p
                                         | Founded in the UK in 2008, <b>StarLeaf</b> has a global footprint with representation on every continent and offices
