Add dates to homepage events

--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -13,13 +13,13 @@ mixin quickLinks
         div.row.events
             div.col-md-3
                 h2 TPP CompSoc Pub Quiz
-                p.date October 2018
+                p.date 23<sup>rd</sup> October 2018
                 p Bring your laptop along so you can try and crack our coding challenge!
                 img(src="/img/events/events_tpp_pub_quiz.jpg")
 
             div.col-md-3
                 h2 Scott Logic Coding Challenge
-                p.date November 2018
+                p.date 3<sup>rd</sup> November 2018
                 p Test your skills against an increasingly challenging AI...
                 img(src="/img/sl_trans.png")
 
