Update sponsor link

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -52,7 +52,7 @@ block content
                                         | Easily integrated with any 3<sup>rd</sup> party supplier, Bede gives back choice and flexibility to customers.
 
                                 .col-md-6
-                                    a(href="https://tpptop50.com/")
+                                    a(href="https://www.tpp-uk.com/careers")
                                         img.sponsor-img(src="./img/sponsors/tpp.svg")
                                     p
                                         | <b>TPP</b> is a cutting-edge software company based in Leeds. We're revolutionising healthcare across
@@ -103,7 +103,7 @@ block content
                                         | globally successful software team tick.
 
                                 .col-md-6
-                                    a(href="https://tpptop50.com/")
+                                    a(href="https://www.tpp-uk.com/careers")
                                         img.sponsor-img(src="./img/sponsors/tpp.svg")
                                     p
                                         | <b>TPP</b> is a cutting-edge software company based in Leeds. We're revolutionising healthcare across
