Update homepage events

--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -11,27 +11,21 @@ mixin quickLinks
 
         // Shiny events
         div.row.events
-            div.col-md-3
-                h2 TPP CompSoc Pub Quiz
-                p.date 23<sup>rd</sup> October 2018
-                p Bring your laptop along so you can try and crack our coding challenge!
-                img(src="/img/events/events_tpp_pub_quiz.jpg")
-
-            div.col-md-3
+            div.col-md-4
                 h2 Scott Logic Coding Challenge
                 p.date 3<sup>rd</sup> November 2018
                 p Test your skills against an increasingly challenging AI...
-                img(src="/img/sl_trans.png")
+                a(href="/events")
+                 img(src="/img/events/slcc2.png" style="max-width:75%")
 
-            div.col-md-3.dh18
+            div.col-md-4.dh18
                 h2 DurHack 2018
                 p.date 17th-18th November 2018
-                p Join 150 hackers from Durham and around the world to push the boundaries of technology.
+                p Join 150 students from Durham and around the world to push the boundaries of technology.
                 a(href="https://durhack.com")
                  img(src="/img/dh18_trans.png")
-                a.btn.btn-default.homepage-btn-vertical(href="https://durhack.com" role="button") Find out more &raquo;
 
-            div.col-md-3
+            div.col-md-4
                 h2 Arista CompSoc Workshop
                 p.date November 2018
                 p Learn about high performance computing and Arista's career opportunities.
