Change page titles to include &raquo; instead of hyphen

--- a/views/durhack.pug
+++ b/views/durhack.pug
@@ -3,7 +3,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title DurHack - Durham CompSoc
+    title DurHack &raquo; Durham CompSoc
     link(href="/aboutStyle.css" rel="stylesheet")
     link(href="/durhackStyle.css" rel="stylesheet")
 
