--- a/views/events.pug
+++ b/views/events.pug
@@ -2,7 +2,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title Events - Durham CompSoc
+    title Events &raquo; Durham CompSoc
     link(href="/events.css" rel="stylesheet")
     script(defer src="https://embed.typeform.com/embed.js")
     script(defer src="/js/typeform.js")
