--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends templates/marginals.pug
 include ./quickLinks.pug
 
 block head
-    title Homepage - Durham CompSoc
+    title Homepage &raquo; Durham CompSoc
     link(href="/homepageStyle.css" rel="stylesheet")
     script(defer src="https://embed.typeform.com/embed.js")
     script(defer src="/js/typeform.js")
