--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -2,7 +2,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title Sponsors - Durham CompSoc
+    title Sponsors &raquo; Durham CompSoc
     link(href="/sponsorsStyle.css" rel="stylesheet")
 
 block title
