--- a/views/about.pug
+++ b/views/about.pug
@@ -6,7 +6,7 @@ include ./quickLinks.pug
 include ./pageBanner.pug
 
 block append head
-    title About - Durham CompSoc
+    title About &raquo; Durham CompSoc
     link(href="/aboutStyle.css" rel="stylesheet")
 
 //- The main title and banner with icons
