--- a/views/events.pug
+++ b/views/events.pug
@@ -35,6 +35,8 @@ block content
             #upcoming_events.hidden
                 // Will be filled by load_events.js
 
+            p.stay-tuned-text Stay tuned for more events!
+
         .col-md-6
 
             h2 What We've Done!
