--- a/views/about.pug
+++ b/views/about.pug
@@ -17,15 +17,15 @@ block content
     div.row
         .container
             div.col-md-6
-                p.information.
-                    CompSoc is Durham University’s Computing Society. It is run entirely by students and serves to promote
-                    programming, development and general computing. We are a community of passionate problem solvers who
-                    come together to run weekly meetings, workshops and hackathons throughout the year. No matter if
-                    you're a novice or expert, come down to see what we have to offer! <br/><br/>
-                    Browse around the site to find out more!
+                p.information
+                    | CompSoc is Durham University Computing Society. It is run entirely by students and serves to promote
+                    | programming, development and general computing. We are a community of passionate problem solvers who
+                    | come together to run weekly meetings, workshops and hackathons throughout the year. No matter if
+                    | you're a novice or expert, come down to see what we have to offer!
+                p.information
+                    | Browse around the site to find out more!
 
-                //images carousel (next to the description)
-
+            // Images carousel (next to the description)
             div.col-md-6
                 #carousel-images.carousel.slide(data-ride=carousel data-interval="false")
                     ol.carousel-indicators
