--- a/views/contact.pug
+++ b/views/contact.pug
@@ -17,14 +17,14 @@ block content
             h2 We're social !
             div.row
                 div.col-md-3
-                    p <a href = "https://www.facebook.com/DurhamCompsoc/"><i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i></a>
+                    p <a href="https://www.facebook.com/DurhamCompSoc/"><i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i></a>
                 div.col-md-3
-                    p <a href = "https://twitter.com/ducompsoc/"><i class="fa fa-twitter fa-5x" aria-hidden="true"></i></a>
+                    p <a href="https://twitter.com/ducompsoc/"><i class="fa fa-twitter fa-5x" aria-hidden="true"></i></a>
             div.row
                 div.col-md-3
-                    p <a href = "https://ducompsoc.slack.com/"><i class="fa fa-slack fa-5x" aria-hidden="true"></i></a>
+                    p <a href="https://ducompsoc.slack.com/"><i class="fa fa-slack fa-5x" aria-hidden="true"></i></a>
                 div.col-md-3
-                    p <a href = "https://linkedin.com/company/ducompsoc"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
+                    p <a href="https://linkedin.com/company/ducompsoc"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
 
         div.col-md-6
             h2 Drop Us a Message
