--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -14,7 +14,7 @@ mixin quickLinks
             div.col-md-6.dh18
                 h2 DurHack 2018
                 p.date 17th-18th November 2018
-                p Join 150 students from Durham and around the world to push the boundaries of technology.
+                p DurHack has finished this year – see submissions at #[a(href="https://durhack.com") durhack.com]!
                 a(href="https://durhack.com")
                  img(src="/img/dh18_trans.png")
 
