Change homepage ‘Upcoming Events’ title

--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -7,7 +7,7 @@ mixin quickLinks
     link(href="/quickLinks.css" rel="stylesheet")
     div.container.quickLinks
 
-        h1 Upcoming Events
+        h1 Events
 
         // Shiny events
         div.row.events
