Remove Arista from homepage events

--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -19,10 +19,10 @@ mixin quickLinks
                  img(src="/img/dh18_trans.png")
 
             div.col-md-6
-                h2 Arista CompSoc Workshop
-                p.date November 2018
-                p Learn about high performance computing and Arista's career opportunities.
-                img(src="/img/sponsors/arista.svg")
+                h2 More coming soon...
+                p.date 2019
+                p We've got events lined up with sponsors such as TPP and American Express. Stay tuned!
+                p Check out our #[a(href="/events") events] page for more.
 
         hr
 
