Add ‘View All’ text link to quick links events

--- a/public/quickLinks.css
+++ b/public/quickLinks.css
@@ -70,7 +70,7 @@
     background: #545354;
 }
 
-.quickLinks h1 {
+.quickLinks .eventsHeader {
     margin-bottom: 28px;
     text-align: center;
 }
