--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -7,7 +7,9 @@ mixin quickLinks
     link(href="/quickLinks.css" rel="stylesheet")
     div.container.quickLinks
 
-        h1 Events
+        div.eventsHeader
+            h1 Events
+            a(href="/events") View All
 
         // Shiny events
         div.row.events
