Update DurHack content page

--- a/views/durhack.pug
+++ b/views/durhack.pug
@@ -24,15 +24,25 @@ block content
 
             hr
 
+            h3 DurHack 2018
+            h5 17<sup>th</sup>-18<sup>th</sup> November 2018
+            p The third iteration of DurHack was the most successful iteration of DurHack yet!
+            p 150 of the best and brighest hackers from Durham and around the world pushed the boundaries of technology to new limits.
+            p Sponsors like Bloomberg, GitHub, TPP, Waterstons, Durham County Council and more helped to grow DurHack to the biggest hackathon in north-east England.
+            p More info at #[a(href="https://durhack.com") durhack.com].
+            p.image #[img(src="./img/durhack2018.jpg")]
+
+            hr
+
             h3 DurHack 2017
-            h5 9th-10th December 2017
+            h5 9<sup>th</sup>-10<sup>th</sup> December 2017
             p CompSoc brought back DurHack for a second year running and it was a huge success. With Durham County Council, Barclays, TPP, .TECH Domains, Waterstons, Entrepreneurs Durham, The Keyboard Company, the Department of Computer Science and Durham Students' Union on board as sponsors, this event was jam-packed with prizes and was not a hackathon to be missed!
             p.image #[img(src="./img/events/events_durhack_2.jpg")]
 
             hr
 
             h3 DurHack
-            h5 28th-29th January 2017
+            h5 28<sup>th</sup>-29<sup>th</sup> January 2017
             p DurHack first ran in January 2017, CompSoc's first ever 24-hour hackathon sponsored by big names like Durham County Council, GitHub, MLH, Sunderland Software City, Durham Students' Union, Entrepreneurs Durham, Waterstons, Barclays, Microsoft and Durham University. With enormous data sets from in and around Durham, participants from various UK universities utilised it to produce something that can potentially make a different to the region. 24 hours of coding interspersed with workshops, games, VR, short sleep sprints and awesome food, the event was a massive success.
             p.image #[img(src="./img/events/events_Durhack_2017.png")]
 
