Update DurHack page wording

--- a/views/durhack.pug
+++ b/views/durhack.pug
@@ -17,9 +17,8 @@ block content
     .container
         #up-info
             h2 DurHack is CompSoc's Flagship Annual Hackathon
-            p CompSoc runs a large-scale annual hackathon with students from all sorts of universities from all over the country. At DurHack 2017, we had students come from as far as Croatia!
-            p DurHack 2018 is coming soon – see #[a(href = "http://durhack.com") durhack.com]!
-            p If you're interested in sponsoring CompSoc's next big hackathon, please #[a(href="/contact") get in touch].
+            p CompSoc runs a large-scale annual hackathon with students from all sorts of backgrounds. At DurHack 2018, we had 150 students from all over the UK and Europe!
+            p DurHack 2019 is quite a few months away, if you're interested in either <b>sponsoring</b> or <b>organising</b> DurHack 2019, please #[a(href="/contact") get in touch].
             p.image #[a(href="https://durhack.com") #[img(src="./img/dh18_light.png")]]
 
             hr
