--- a/views/templates/base.pug
+++ b/views/templates/base.pug
@@ -18,6 +18,7 @@ html(lang="en")
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#a0c0c7">
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="theme-color" content="#ffffff">
+        <!-- Current git commit: #{currentGitCommitHash} -->
     body
         block nav
         block content
