feat(team): add henry

--- a/views/team.pug
+++ b/views/team.pug
@@ -48,7 +48,7 @@ block content
                             p.description
                               | Works with sponsors and guest speakers to organise talks and workshops.
                           .col-md-3.no-padding
-                            img(src="./img/team/placeholder.png").exec-photo
+                            img(src="./img/team/henry.jpg").exec-photo
                 .row
                   .col-md-6
                     .panel.panel-info
