feat: make page less jarring on small screens

--- a/views/team.pug
+++ b/views/team.pug
@@ -25,80 +25,80 @@ block content
           #ex90.panel-collapse.collapse.in(aria-expanded="true")
             .panel-body.panel-body-cards
                 .row
-                  .col-md-6
+                  .col-sm-6
                     .panel.panel-info
                       .panel-heading
                         h3.position President
                         h3.exec-name Karl Southern
                       .panel-content
                         .row
-                          .col-md-9
+                          .col-sm-9
                             p.description
                               | In charge of overseeing everything in the society and reaching out to sponsors.
-                          .col-md-3.no-padding
+                          .col-sm-3.no-padding
                             img(src="./img/team/karl.jpg").exec-photo
-                  .col-md-6
+                  .col-sm-6
                     .panel.panel-info
                       .panel-heading
                         h3.position Events Officer
                         h3.exec-name Henry Westmacott
                       .panel-content
                         .row
-                          .col-md-9
+                          .col-sm-9
                             p.description
                               | Works with sponsors and guest speakers to organise talks and workshops.
-                          .col-md-3.no-padding
+                          .col-sm-3.no-padding
                             img(src="./img/team/henry.jpg").exec-photo
                 .row
-                  .col-md-6
+                  .col-sm-6
                     .panel.panel-info
                       .panel-heading
                         h3.position Treasurer
                         h3.exec-name Merry
                       .panel-content
                         .row
-                          .col-md-9
+                          .col-sm-9
                             p.description
                               | Manages CompSoc's finances.
-                          .col-md-3.no-padding
+                          .col-sm-3.no-padding
                             img(src="./img/team/merry.jpg").exec-photo
-                  .col-md-6
+                  .col-sm-6
                     .panel.panel-info
                       .panel-heading
                         h3.position Publicity Officer
                         h3.exec-name Tom Nudd
                       .panel-content
                         .row
-                          .col-md-9
+                          .col-sm-9
                             p.description
                               | In charge of the website content, social media, the mailing list, and promoting the society around the university.
-                          .col-md-3.no-padding
+                          .col-sm-3.no-padding
                             img(src="./img/team/placeholder.png").exec-photo
                 .row
-                  .col-md-6
+                  .col-sm-6
                     .panel.panel-info
                       .panel-heading
                         h3.position Technical Web Officer
                         h3.exec-name Ethan Waite
                       .panel-content
                         .row
-                          .col-md-9
+                          .col-sm-9
                             p.description
                               | Works with the Publicity Officer to manage the technical side of the website.
-                          .col-md-3.no-padding
+                          .col-sm-3.no-padding
                             img(src="./img/team/ethan.jpg").exec-photo
-                  .col-md-6
+                  .col-sm-6
                     .panel.panel-info
                       .panel-heading
                         h3.position Secretary
                         h3.exec-name Kanika Mehta
                       .panel-content
                         .row
-                          .col-md-9
+                          .col-sm-9
                             p.description
                               | Responsible for working with sponsors and other organisations to ensure CompSoc runs smoothly, handling
                               | contracts and paperwork.
-                          .col-md-3.no-padding
+                          .col-sm-3.no-padding
                             img(src="./img/team/kanika.jpg").exec-photo
       .panel-group
         .panel.panel-default
@@ -108,36 +108,36 @@ block content
           #ex89.panel-collapse.collapse
             .panel-body
               .row
-                .col-md-3
+                .col-md-3.col-sm-6
                   h3 President
                   img(src="./img/team/robbie.jpg").exec-photo
                   h3 Robbie Jakob-Whitworth
-                .col-md-3
+                .col-md-3.col-sm-6
                   h3 Events Officer
                   img(src="./img/team/karl.jpg").exec-photo
                   h3 Karl Southern
-                .col-md-3
+                .col-md-3.col-sm-6
                   h3 Treasurer
                   img(src="./img/team/jess.png").exec-photo
                   h3 Jessica Ng
-                .col-md-3
+                .col-md-3.col-sm-6
                   h3 Education Officer
                   img(src="./img/team/mitchel.jpg").exec-photo
                   h3 Mitchel Starkie
               .row
-                .col-md-3
+                .col-md-3.col-sm-6
                   h3 Publicity Officer
                   img(src="./img/team/kat.png").exec-photo
                   h3 Kat Strachan
-                .col-md-3
+                .col-md-3.col-sm-6
                   h3 Technical Web Officer
                   img(src="./img/team/soumya2.png").exec-photo
                   h3 Soumya Singh
-                .col-md-3
+                .col-md-3.col-sm-6
                   h3 Secretary
                   img(src="./img/team/Vivek Mehta.png").exec-photo
                   h3 Vivek Mehta
-                .col-md-3
+                .col-md-3.col-sm-6
                   h3 Officers without Portfolio
                   img(src="./img/team/dmytro.png").exec-photo
                   h3 Dmytro Drobisher and Henrike Gbinigie
