feat: address comments

--- a/views/team.pug
+++ b/views/team.pug
@@ -54,7 +54,7 @@ block content
                     .panel.panel-info
                       .panel-heading
                         h3.position Treasurer
-                        h3.exec-name Merry
+                        h3.exec-name Merry Gibbons
                       .panel-content
                         .row
                           .col-sm-9
