feat(events): addd tpp pub quiz and careers event

--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -13,14 +13,20 @@ mixin quickLinks
 
         // Shiny events
         div.row.events
-            div.col-md-6.dh18
+            div.col-md-4.dh18
                 h2 DurHack 2018
                 p.date 17<sup>th</sup>-18<sup>th</sup> November 2018
                 p DurHack has finished this year – see submissions at #[a(href="https://durhack.com") durhack.com]!
                 a(href="https://durhack.com")
                  img(src="/img/dh18_trans.png")
+            
+            div.col-md-4
+                h2 TPP Pub Quiz
+                p.date 10<sup>th</sup> June 2019
+                p Come join TTP and CompSoc at The Court Inn for a not-so-typical pub quiz!
+                a(href="https://www.facebook.com/events/451374975639599/") &raquo; More info on Facebook
 
-            div.col-md-6
+            div.col-md-4
                 h2 More coming soon...
                 p We've got events lined up with sponsors such as TPP and Waterstons. Stay tuned!
                 p Check out our #[a(href="/events") events] page for more.
