Update homepage events text

--- a/views/quickLinks.pug
+++ b/views/quickLinks.pug
@@ -14,11 +14,11 @@ mixin quickLinks
         // Shiny events
         div.row.events
             div.col-md-4.dh18
-                h2 DurHack 2018
-                p.date 17<sup>th</sup>-18<sup>th</sup> November 2018
-                p DurHack has finished this year – see submissions at #[a(href="https://durhack.com") durhack.com]!
+                h2 DurHack 2019
+                p.date November 2019
+                p It's back! Join 150 students from Durham and around the world to push the boundaries of technology.
                 a(href="https://durhack.com")
-                 img(src="/img/dh18_trans.png")
+                 img(src="/img/dh19_trans.png" width="250")
             
             div.col-md-4
                 h2 TPP Pub Quiz
