Update DurHack webpage

--- a/public/durhackStyle.css
+++ b/public/durhackStyle.css
@@ -10,3 +10,11 @@ p {
 p.image {
     text-align:center;
 }
+
+#dh-intro {
+    column-width: 400px;
+}
+
+#dh-intro .image img {
+    max-height: 350px;
+}
