--- a/views/durhack.pug
+++ b/views/durhack.pug
@@ -16,10 +16,11 @@ block title
 block content
     .container
         #up-info
-            h2 DurHack is CompSoc's Flagship Annual Hackathon
-            p CompSoc runs a large-scale annual hackathon with students from all sorts of backgrounds. At DurHack 2018, we had 150 students from all over the UK and Europe!
-            p DurHack 2019 is quite a few months away, if you're interested in either <b>sponsoring</b> or <b>organising</b> DurHack 2019, please #[a(href="/contact") get in touch].
-            p.image #[a(href="https://durhack.com") #[img(src="./img/dh18_light.png")]]
+            #dh-intro
+                h2 DurHack is CompSoc's Flagship Annual Hackathon
+                p CompSoc runs a large-scale annual hackathon with students from all sorts of backgrounds. At DurHack 2018, we had 150 students from all over the UK and Europe!
+                p DurHack 2019 is coming this November! For more information, head to #[a(href="https://durhack.com") durhack.com] to pre-register. If you're interested in <strong>sponsoring</strong> DurHack 2019, please #[a(href="/contact") get in touch].
+                p.image #[a(href="https://durhack.com") #[img(src="./img/dh19_trans.png")]]
 
             hr
 
