--- a/public/durhackStyle.css
+++ b/public/durhackStyle.css
@@ -12,7 +12,8 @@ p.image {
 }
 
 #dh-intro {
-    column-width: 350px;
+    column-width: 400px;
+    column-count: auto;
 }
 
 #dh-intro .image img {
