--- a/src/components/join-banner/join-banner.scss
+++ b/src/components/join-banner/join-banner.scss
@@ -14,11 +14,11 @@
 
 			> a {
 				display: inline-block;
-				width: 32px;
+				width: 72px;
 				font-size: 32px;
 				text-align: center;
 				color: #000;
-				padding: 20px;
+				padding: 20px 0px;
 				transition: .5s ease;
 
 				&:hover {
