--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -1,10 +1,12 @@
-@import '../../variables.scss';
+@import "../../variables.scss";
 
 .team {
 	margin-bottom: 64px;
 
 	> .container {
-		> p, .grid, .prev-link {
+		> p,
+		.grid,
+		.prev-link {
 			padding-left: 64px;
 
 			@media screen and (max-width: $breakpoint-small) {
