--- a/src/App.scss
+++ b/src/App.scss
@@ -4,15 +4,20 @@
  * https://sass-lang.com/guide
  */
 
-@import './variables.scss';
+@import "./variables.scss";
 
-@import url('https://fonts.googleapis.com/css?family=Jura:700|Montserrat:400,700|Lato:400|Source+Code+Pro:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Jura:700|Montserrat:400,700|Lato:400|Source+Code+Pro:400,700&display=swap");
 
 body {
 	font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5, div {
+h1,
+h2,
+h3,
+h4,
+h5,
+div {
 	box-sizing: border-box;
 }
 
@@ -26,7 +31,8 @@ h1, h2, h3, h4, h5, div {
 	flex-direction: column;
 }
 
-.center, .align-center {
+.center,
+.align-center {
 	align-items: center;
 }
 
