--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -15,6 +15,10 @@
 		}
 
 		.info {
+			display: inline-flex;
+			flex-direction: column;
+			align-items: flex-start;
+
 			width: 90%;
 			font-weight: bold;
 			padding: 256px 64px 32px 0px;
