--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -17,13 +17,14 @@
 		.info {
 			display: inline-flex;
 			flex-direction: column;
-			align-items: flex-start;
+			align-items: stretch;
 
 			width: 90%;
 			font-weight: bold;
 			padding: 256px 64px 32px 0px;
 
 			h3 {
+				display: contents;
 				font-size: 48px;
 				margin: 0px;
 				overflow: visible;
@@ -42,6 +43,7 @@
 			}
 
 			h3 > span {
+				padding-bottom: 0;
 				padding-right: 64px;
 			}
 		}
